--- a/hr portal/task3/package.json
+++ b/hr portal/task3/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "axios": "^1.8.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
